--- a/assets/index.html
+++ b/assets/index.html
@@ -8,7 +8,7 @@
 		<title>Node Hello World example</title>
 	</head>
 	<body>
-		<form action="http://localhost:3000/userform" method="GET">
+		<form action="/userform" method="GET">
 			<p>
 				First Name: <input type="text" name="first_name">
 			</p>
